--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-image": "^0.7.1",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-preact": "^4.7.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-sitemap": "^2.11.0",
@@ -35,6 +38,8 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-formium": "^0.1.1",
     "gatsby-transformer-sharp": "^2.11.0",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
