--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gatsby-source-contentful": "^4.6.1",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-formium": "^0.1.1",
+    "gatsby-source-graphql": "^2.14.0",
+    "gatsby-source-wordpress": "^4.0.3",
     "gatsby-transformer-sharp": "^2.11.0",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
